Changes to Version 3.1-2
 
  o Use t-distribution for score tests in boxTidwell() and add omnibus score test (suggestions of Peter Dalgaard).
  
  o residualPlots() is no longer confused by a one-column matrix regressor, produced, e.g., by scale() (issue reported by Tom Wenseleers).
  
  o Make the printed formating of hypotheses in linearHypothesis() more tolerant of coefficients with certain non-standard names (after issue reported by Matthieu Stigler).

Changes to Version 3.1-1

  o Fixed bug in hccm(): when some cases are fit exactly all versions of the hccm estimate are singular and inconsistent.  A error message is now returned.
  
  o Fixed bug in Anova.survreg() for Wald tests (reported by Megan Taylor Jones), which failed with a spurious "missing residual df" error.
  
  o Made Anova.lm() more robust when there are aliased coefficients (following report of cryptic output by Taiwo Fagbohungbe).
  
  o Added reg.function, reg.function.col, and mouseMode arguments to scatter3d(), and mouseMode to crPlot3d().

  o Added fill and associated arguments to influencePlot() (initial implementation of Michael Friendly).
  
  o Added confidenceEllipses() function to create matrix of all pairwise confidence ellipses for a regression model (suggestion of Michael Friendly).
  
  o Moved the pointLabel() function from the maptools package in anticipation of the retirement of that package, and with the permission of the function author, Tom Short.
  
Changes to Version 3.1-0

  o New 3D added-variable and component+residual plots, avPlot3d() and crPlot3d().

  o More flexible recode()/Recode().
  
  o Added Anova.svycoxph() to prevent selection of test.statistic="LR".
  
  o New take on vif.lm().
  
Changes to Version 3.0-13

  o Handle singularities better in Anova.mlm() (suggestion of Marius Barth).
  
  o Fixed error reporting in logit() (bug reported by Collin Erickson).
  