@@ -1,5 +1,7 @@
 Changes to Version 3.1-2
  
+  o Fixed hccm to return correct error message when regressors are ill-conditioned.
+  
   o Use t-distribution for score tests in boxTidwell() and add omnibus score test (suggestions of Peter Dalgaard).
   
   o residualPlots() is no longer confused by a one-column matrix regressor, produced, e.g., by scale() (issue reported by Tom Wenseleers).
